wifi_e_ink/build/log/idf_py_stdout_output_17439
[1/12] Performing build step for 'bootloader'
[1/1] cd /Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/build/bootloader/esp-idf/esptool_py && /Users/hanyi02/.espressif/python_env/idf5.1_py3.9_env/bin/python /Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/build/bootloader/bootloader.bin
Bootloader binary size 0x6790 bytes. 0x870 bytes (8%) free.
[2/10] Building C object esp-idf/eink_graphic/CMakeFiles/__idf_eink_graphic.dir/eink_graphic.c.obj
FAILED: esp-idf/eink_graphic/CMakeFiles/__idf_eink_graphic.dir/eink_graphic.c.obj 
/Users/hanyi02/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-4124-gbb9200acec\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/build/config -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/newlib/platform_include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/esp_additions/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/heap/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/log/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/soc/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/soc/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/soc/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/hal/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/hal/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/hal/platform_port/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_rom/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_rom/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_common/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_system/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_system/port/soc -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_system/port/include/private -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/xtensa/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/xtensa/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/include/apps -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/lwip/src/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/freertos/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/esp32xx/include/arch -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink=. -fmacro-prefix-map=/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/eink_graphic/CMakeFiles/__idf_eink_graphic.dir/eink_graphic.c.obj -MF esp-idf/eink_graphic/CMakeFiles/__idf_eink_graphic.dir/eink_graphic.c.obj.d -o esp-idf/eink_graphic/CMakeFiles/__idf_eink_graphic.dir/eink_graphic.c.obj -c /Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c: In function 'set_pixle':
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c:28:42: warning: passing argument 1 of 'color_trans' from incompatible pointer type [-Wincompatible-pointer-types]
   28 |         uint8_t real_color = color_trans(p, color_map);
      |                                          ^
      |                                          |
      |                                          pixel_t *
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c:12:30: note: expected 'color_t *' but argument is of type 'pixel_t *'
   12 | uint8_t color_trans(color_t *p, color_map_t *map) {
      |                     ~~~~~~~~~^
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c:28:17: warning: unused variable 'real_color' [-Wunused-variable]
   28 |         uint8_t real_color = color_trans(p, color_map);
      |                 ^~~~~~~~~~
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c:31:22: error: 'pixel_index' undeclared (first use in this function); did you mean 'pixle_index'?
   31 |     int char_index = pixel_index / 2;
      |                      ^~~~~~~~~~~
      |                      pixle_index
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c:31:22: note: each undeclared identifier is reported only once for each function it appears in
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c:32:5: error: unknown type name 'bool'
   32 |     bool is_high = pixle_index%2 == 0;
      |     ^~~~
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c:3:1: note: 'bool' is defined in header '<stdbool.h>'; did you forget to '#include <stdbool.h>'?
    2 | #include "eink_graphic.h"
  +++ |+#include <stdbool.h>
    3 | 
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_e_ink/components/eink_graphic/eink_graphic.c:31:9: warning: unused variable 'char_index' [-Wunused-variable]
   31 |     int char_index = pixel_index / 2;
      |         ^~~~~~~~~~
ninja: build stopped: subcommand failed.
